k8s/index-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: index-depl
  namespace: z-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: index
  template:
    metadata:
      labels:
        app: index
    spec:
      containers:
        - name: index
          image: viktorzetterstrom/index-zetterstrom-dev
---
apiVersion: v1
kind: Service
metadata:
  name: index-srv
  namespace: z-dev
spec:
  type: ClusterIP
  selector:
    app: index
  ports:
    - name: index
      protocol: TCP
      port: 80
      targetPort: 80
