k8s/news-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-depl
  namespace: z-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: news
  template:
    metadata:
      labels:
        app: news
    spec:
      containers:
        - name: news
          image: viktorzetterstrom/news-zetterstrom-dev
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: news-srv
  namespace: z-dev
spec:
  type: ClusterIP
  selector:
    app: news
  ports:
    - name: news
      protocol: TCP
      port: 80
      targetPort: 8000
