k8s/recipes-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipes-depl
  namespace: z-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipes
  template:
    metadata:
      labels:
        app: recipes
    spec:
      containers:
        - name: recipes
          image: viktorzetterstrom/recipes-zetterstrom-dev
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: recipes-srv
  namespace: z-dev
spec:
  type: ClusterIP
  selector:
    app: recipes
  ports:
    - name: recipes
      protocol: TCP
      port: 80
      targetPort: 4000
