k8s/shl-api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shl-api-depl
  namespace: z-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shl-api
  template:
    metadata:
      labels:
        app: shl-api
    spec:
      containers:
        - name: shl-api
          image: viktorzetterstrom/shl-api-zetterstrom-dev
          ports:
            - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: shl-api-srv
  namespace: z-dev
spec:
  type: ClusterIP
  selector:
    app: shl-api
  ports:
    - name: shl-api
      protocol: TCP
      port: 80
      targetPort: 4001
