k8s/shl-client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shl-client-depl
  namespace: z-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shl-client
  template:
    metadata:
      labels:
        app: shl-client
    spec:
      containers:
        - name: shl-client
          image: viktorzetterstrom/shl-client-zetterstrom-dev
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: shl-client-srv
  namespace: z-dev
spec:
  type: ClusterIP
  selector:
    app: shl-client
  ports:
    - name: shl-client
      protocol: TCP
      port: 80
      targetPort: 4000
