k8s/trivia-api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trivia-api-depl
  namespace: z-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trivia-api
  template:
    metadata:
      labels:
        app: trivia-api
    spec:
      containers:
        - name: trivia-api
          image: viktorzetterstrom/trivia-api-zetterstrom-dev
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: trivia-api-srv
  namespace: z-dev
spec:
  type: ClusterIP
  selector:
    app: trivia-api
  ports:
    - name: trivia-api
      protocol: TCP
      port: 80
      targetPort: 5001
