k8s/trivia-client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trivia-client-depl
  namespace: z-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trivia-client
  template:
    metadata:
      labels:
        app: trivia-client
    spec:
      containers:
        - name: trivia-client
          image: viktorzetterstrom/trivia-client-zetterstrom-dev
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: trivia-client-srv
  namespace: z-dev
spec:
  type: ClusterIP
  selector:
    app: trivia-client
  ports:
    - name: trivia-client
      protocol: TCP
      port: 80
      targetPort: 5000
