k8s/wdng-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wdng-depl
  namespace: zetterstrom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wdng
  template:
    metadata:
      labels:
        app: wdng
    spec:
      containers:
        - name: wdng
          image: viktorzetterstrom/wdng-zetterstrom-dev
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wdng-srv
  namespace: zetterstrom
spec:
  type: ClusterIP
  selector:
    app: wdng
  ports:
    - name: wdng
      protocol: TCP
      port: 80
      targetPort: 80
