k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
  namespace: zetterstrom
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    # Local development TLS
    - hosts:
        - local.zetterstrom.dev
        - local.movies.zetterstrom.dev
        - local.recipes.zetterstrom.dev
        - local.stava.zetterstrom.dev
      secretName: local-zetterstrom-dev-tls
    # Production TLS - zetterstrom.dev
    - hosts:
        - zetterstrom.dev
        - movies.zetterstrom.dev
        - recipes.zetterstrom.dev
        - stava.zetterstrom.dev
      secretName: zetterstrom-dev-tls
    # Production TLS - viktor-och-hanna.se
    - hosts:
        - viktor-och-hanna.se
        - www.viktor-och-hanna.se
      secretName: viktor-och-hanna-se-tls
  rules:
    # Local development domains
    - host: local.zetterstrom.dev
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: index-srv
                port:
                  number: 80
    - host: local.movies.zetterstrom.dev
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: movies-srv
                port:
                  number: 80
    - host: local.recipes.zetterstrom.dev
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: recipes-srv
                port:
                  number: 80
    - host: local.stava.zetterstrom.dev
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: stava-srv
                port:
                  number: 80
    # Production domains
    - host: zetterstrom.dev
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: index-srv
                port:
                  number: 80
    - host: movies.zetterstrom.dev
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: movies-srv
                port:
                  number: 80
    - host: recipes.zetterstrom.dev
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: recipes-srv
                port:
                  number: 80
    - host: stava.zetterstrom.dev
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: stava-srv
                port:
                  number: 80
    # Viktor och Hanna domains
    - host: viktor-och-hanna.se
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: wdng-srv
                port:
                  number: 80
    - host: www.viktor-och-hanna.se
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: wdng-srv
                port:
                  number: 80
